--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://code.mycard.moe/3rdeye/koishi-plugin-cache-memcached.git"
+    "url": "https://github.com/koishijs/koishi-plugin-cache-memcached.git"
   },
   "author": "Nanahira <nanahira@momobako.com>",
   "license": "MIT",
@@ -26,9 +26,9 @@
     "memjs"
   ],
   "bugs": {
-    "url": "https://code.mycard.moe/3rdeye/koishi-plugin-cache-memcached/issues"
+    "url": "https://github.com/koishijs/koishi-plugin-cache-memcached/issues"
   },
-  "homepage": "https://code.mycard.moe/3rdeye/koishi-plugin-cache-memcached",
+  "homepage": "https://github.com/koishijs/koishi-plugin-cache-memcached",
   "dependencies": {
     "@types/memjs": "^1.2.3",
     "source-map-support": "^0.5.20"
