--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "lint": "eslint --fix .",
-    "build": "webpack"
+    "build": "webpack && env PACK_ALL=1 webpack"
   },
   "repository": {
     "type": "git",
@@ -31,24 +31,24 @@
   "homepage": "https://github.com/koishijs/koishi-plugin-cache-memcached",
   "dependencies": {
     "@types/memjs": "^1.2.3",
-    "source-map-support": "^0.5.20"
+    "schemastery-gen": "^1.0.3",
+    "source-map-support": "^0.5.20",
+    "memjs": "^1.3.0",
+    "moment": "^2.29.1",
+    "encoded-buffer": "^0.2.6"
   },
   "peerDependencies": {
-    "koishi": "^4.0.0-alpha.10"
+    "koishi": "^4.0.0-beta-2"
   },
   "devDependencies": {
     "@types/moment": "^2.13.0",
     "@types/node": "^16.11.1",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
-    "encoded-buffer": "^0.2.6",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.1",
-    "koishi": "^4.0.0-alpha.10",
-    "koishi-utils-schemagen": "^1.1.7",
-    "memjs": "^1.3.0",
-    "moment": "^2.29.1",
+    "koishi": "^4.0.0-beta.2",
     "prettier": "^2.4.1",
     "raw-loader": "^4.0.2",
     "ts-loader": "^9.2.6",
