--- a/package.json
+++ b/package.json
@@ -31,14 +31,14 @@
   "homepage": "https://github.com/koishijs/koishi-plugin-cache-memcached",
   "dependencies": {
     "@types/memjs": "^1.2.3",
-    "schemastery-gen": "^1.0.3",
-    "source-map-support": "^0.5.20",
+    "encoded-buffer": "^0.2.6",
     "memjs": "^1.3.0",
     "moment": "^2.29.1",
-    "encoded-buffer": "^0.2.6"
+    "schemastery-gen": "^2.0.0",
+    "source-map-support": "^0.5.20"
   },
   "peerDependencies": {
-    "koishi": "^4.0.0-beta-2"
+    "koishi": "^4.0.0-beta.3"
   },
   "devDependencies": {
     "@types/moment": "^2.13.0",
@@ -48,7 +48,7 @@
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.1",
-    "koishi": "^4.0.0-beta.2",
+    "koishi": "^4.0.0-beta.3",
     "prettier": "^2.4.1",
     "raw-loader": "^4.0.2",
     "ts-loader": "^9.2.6",
