--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "ts-loader": "^9.2.6",
     "typescript": "^4.4.4",
     "webpack": "^5.58.2",
-    "webpack-cli": "^4.9.1"
+    "webpack-cli": "^4.9.1",
+    "ws": "^8.3.0"
   }
 }
