--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "source-map-support": "^0.5.20"
   },
   "peerDependencies": {
-    "koishi": "^4.0.0-beta.6"
+    "koishi": "^4.0.0-rc.0"
   },
   "devDependencies": {
     "@types/moment": "^2.13.0",
@@ -48,7 +48,7 @@
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.1",
-    "koishi": "^4.0.0-beta.6",
+    "koishi": "^4.0.0-rc.0",
     "prettier": "^2.4.1",
     "raw-loader": "^4.0.2",
     "ts-loader": "^9.2.6",
