--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "coolq",
     "chatbot",
     "koishi",
-    "service:cache",
+    "impl:cache",
     "memcached",
     "memjs"
   ],
@@ -34,11 +34,11 @@
     "encoded-buffer": "^0.2.6",
     "memjs": "^1.3.0",
     "moment": "^2.29.1",
-    "schemastery-gen": "^2.3.2",
+    "schemastery-gen": "^2.4.0",
     "source-map-support": "^0.5.20"
   },
   "peerDependencies": {
-    "koishi": "^4.1.1"
+    "koishi": "^4.2.0"
   },
   "devDependencies": {
     "@types/moment": "^2.13.0",
@@ -48,7 +48,7 @@
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.1",
-    "koishi": "^4.1.1",
+    "koishi": "^4.2.0",
     "prettier": "^2.4.1",
     "raw-loader": "^4.0.2",
     "ts-loader": "^9.2.6",
