--- a/package.json
+++ b/package.json
@@ -36,8 +36,7 @@
     "encoded-buffer": "^0.2.6",
     "memjs": "^1.3.0",
     "moment": "^2.29.1",
-    "schemastery-gen": "^3.1.2",
-    "source-map-support": "^0.5.20"
+    "schemastery-gen": "^3.1.2"
   },
   "devDependencies": {
     "@koishijs/plugin-cache-lru": "^1.0.0-rc.0",
